--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
   ],
   "dependencies": {
     "angular-material": "~0.11.4",
-    "angularjs": "~1.4.8"
+    "angularjs": "~1.4.8",
+    "angular-scroll": "~1.0.0"
   }
 }
